--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,34 @@ body {
   border: none;
   font-size: 5rem;
 }
+
+.squares {
+  background: lightsteelblue;
+  color: black;
+  border: none;
+  font-size: 5rem;
+  cursor: pointer;
+  outline: none;
+}
+
+.info-wrapper button {
+  background-color: lightsteelblue;
+  border-radius: 1.25rem;
+  font-size: 1rem;
+  padding: 0.5rem 1.5rem;
+}
+
+h1 {
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
+  margin: 1rem;
+}
+
+.info-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-size: 1.25rem;
+  margin-top: 1rem;
+}
